Fix font size on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,11 +212,6 @@ section a {
 }
 
 @media only screen and (max-width: 800px) {
-  body {
-    font-size: 0.85rem;
-    line-height: calc(0.85rem * 1.6);
-  }
-
   main {
     margin-left: 0;
   }
